<resources>
    <string name="app_name">P2Photo</string>

    <!-- Menu -->
    <string name="title_activity_settings">Preferences</string>

    <!-- Preferences -->
    <string name="connection_header">Connection</string>
    <string name="server_address">Server IP address</string>
    <string name="default_ip">10.0.2.2</string>
    <string name="server_port">Server port</string>
    <string name="default_port">12345</string>
    <string name="storage_header">Storage</string>
    <string name="storage_default">drive</string>
    <string name="invalid_address">Invalid server address.</string>
    <string name="invalid_port">Port must be a number between 1024 and 65535.</string>
    <string name="invalid_mode">Must select a storage mode.</string>
    <string name="security_header">Security</string>
    <string name="prefKeyPassword">Key Password</string>
    <string name="keyPasswordEmpty">Key password cannot be empty. Set it in Preferences.</string>

    <!-- Connection -->
    <string name="network_disabled">Network is disabled.</string>
    <string name="server_contact_fail">Failed to contact the server.</string>
    <string name="server_connect_fail">Failed to connect to the server.</string>

    <!-- Login / Sign up -->
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="insertKeyPass">Insert a key password for extra security:</string>
    <string name="keypassword">Key password</string>
    <string name="loggin_in">Logging in…</string>
    <string name="user_pass_empty">Username and passwords cannot be empty!</string>
    <string name="login_invalid">Login invalid.</string>
    <string name="createaccount">Create account</string>
    <string name="logged_out">Logged out.</string>
    <string name="logging_out">Logging out…</string>
    <string name="signing_up">Signing up…</string>
    <string name="sign_up_success">Sign up successful.</string>
    <string name="failed_drive_login">Failed to login to Google Drive.</string>

    <!-- Security -->
    <string name="failed_generate_keys">Failed to generate user\'s keys.</string>

    <!-- Menu -->
    <string name="createalbum_opt">Create album</string>
    <string name="addphototoalbum_opt">Add photo to album</string>
    <string name="adduserstoalbum_opt">Add users to album</string>
    <string name="listusersalbums_opt">List user\'s albums</string>
    <string name="logout_opt">Log out</string>

    <!-- Add photo to album -->
    <string name="find_picture">Find picture</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_album">Choose Album and Insert Photo Title</string>
    <string name="insert_photo_title">"Insert Photo Title"</string>

    <!-- Add user to album -->
    <string name="select_album">Select album</string>

    <!-- Create album -->
    <string name="insert_album_name">Insert album name:</string>

    <!-- Find user -->
    <string name="select_user">Select a user to add to one album:</string>

    <string name="download_success">Successfully retrieved file!</string>
    <string name="download_failed_stream">Failed decoding file from stream!</string>
    <string name="download_failed">Failed decoding file!</string>
    <string name="download_started">Download started…</string>
    <string name="album_created">Album created </string>
    <string name="file_created">File created </string>
    <string name="file_create_error">File create error</string>
    <string name="album_create_success">Album created successfully.</string>
    <string name="create_album">Creating album…</string>
    <string name="album_empty_name">"Album name cannot be empty!"</string>
    <string name="load_user_list">Loading user list…</string>
    <string name="load_user_list_success">Loaded user list successfully.</string>
    <string name="load_user_list_fail">Failed to load user list.</string>
    <string name="load_user_album">Loading user\'s albums…</string>
    <string name="load_user_album_success">Loaded user\'s albums list successfully.</string>
    <string name="load_user_album_fail">Failed to load user\'s albums list.</string>
    <string name="load_album_photos">Loading album photos&#8230;</string>
    <string name="load_album_photos_success">Loaded album photos successfully.</string>
    <string name="load_album_photos_fail">Failed to load album photos.</string>

    <!-- Wifi Direct-->
    <string name="local_storage_file">albumList</string>

</resources>
