<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connection_header">

        <EditTextPreference
            app:defaultValue="@string/default_ip"
            app:key="address"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:defaultValue="@string/default_port"
            app:key="port"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/storage_header">

        <ListPreference
            android:defaultValue="@string/storage_default"
            android:key="storage_preference"
            android:title="@string/storage_header"
            android:entries="@array/storage_array"
            android:entryValues="@array/storage_values"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_header">

        <EditTextPreference
            app:key="keyPassword"
            app:title="@string/prefKeyPassword"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
